🚧  Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -1,4 +1,5 @@
 .global-footer {
+  margin-bottom: $order-cta-height;
   padding: 32px 0 40px;
   background-color: $background;
 
@@ -45,6 +46,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
